--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/(.*)",
@@ -46,6 +47,13 @@
           "value": "public, max-age=3600"
         }
       ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/agent-builder",
+      "destination": "/studio",
+      "permanent": true
     }
   ],
   "rewrites": [
