--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
+    "framer-motion": "^12.34.1",
     "lucide-react": "^0.554.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
